# trip-todos

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.html  types.ts
frontend/src/components/: Dashboard.tsx  Header.tsx  TripForm.tsx
frontend/src/services/: aiService.ts  geminiService.ts
