name = "trip-todos-backend"
version = "0.1.0"
description = "FastAPI backend for trip-todos"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "cors>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
